syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "friend-service/proto/gen/auth/v1;authv1";

service AuthService {
	rpc Register(RegisterRequest) returns (RegisterResponse) {
		option (google.api.http) = {
			post: "/v1/auth/register"
			body: "*"
		};
	}
	rpc Login(LoginRequest) returns (LoginResponse) {
		option (google.api.http) = {
			post: "/v1/auth/login"
			body: "*"
		};
	};
	rpc Logout(LogoutRequest) returns (LogoutResponse) {
		option (google.api.http) = {
			post: "/v1/auth/logout"
			body: "*"
		};
	};
	rpc Refresh(RefreshRequest) returns (RefreshResponse) {
		option (google.api.http) = {
			post: "/v1/auth/refresh"
			body: "*"
		};
	};
}

message RegisterRequest {
	string username = 1;
	string password = 2;
	string email = 3;
}

message RegisterResponse {
	string access_token = 2;
	int64 access_expires_at = 3;
	string refresh_token = 4;
	int64 refresh_expires_at = 5;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 2;
	int64 access_expires_at = 3;
	string refresh_token = 4;
	int64 refresh_expires_at = 5;
}

message LogoutRequest {
	string refresh_token = 1;
}

message LogoutResponse {}

message RefreshRequest {
	string refresh_token = 1;
}
message RefreshResponse {
	string access_token = 1;
	int64 access_expires_at = 2;
	string refresh_token = 3;
	int64 refresh_expires_at = 4;
}